--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: login_systems
 description: A new Flutter package project.
 version: 0.0.1
-author:
-homepage:
+homepage: https://github.com/imujtaba8488/package_login_systems
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -40,7 +39,7 @@ flutter:
   fonts:
     - family: Pacifico
       fonts:
-        - asset: assets/fonts/Pacifico.Regular.ttf
+        - asset: assets/fonts/Pacifico-Regular.ttf
 
     - family: RobotoSlab
       fonts:
