--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: login_systems
 description: A collection of login systems ready to be used in any app, currently focussing on mobile application IOS and Android. More on the way!
-version: 1.0.2
+version: 1.0.3
 homepage: https://twitter.com/imujtaba8488
+repository: https://github.com/imujtaba8488/package_login_systems.git
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
